setup: Add the staging workflow to deploy to the staging.shivamnagpal.dev

--- a/src/app/construction-modal/construction-modal.component.html
+++ b/src/app/construction-modal/construction-modal.component.html
@@ -1,4 +1,5 @@
 <div class="construction-modal-container">
   <span class="primary-text">Currently under construction...</span>
   <span class="secondary-text">Because Rome wasn't built in a day, and neither is this website.</span>
+  <span class="secondary-text">- Staging</span>
 </div>
